# Unity-Unterm

./: .gitignore  CHANGELOG.md  README.md  Third Party Notices.md  package.json
.github/workflows/: split-upm.yml
Assets/Unterm/Editor/: UntermNative.cs  UntermWindow.cs
Editor/: AssemblyInfo.cs  ClaudeCode.cs  UntermAgentWindow.cs  UntermCaptureTools.cs  UntermCodeEditorWindow.cs  UntermCompletionWorker.cs  UntermExecuteCodeTools.cs  UntermExternalCodeEditor.cs  UntermLog.cs  UntermMcp.cs  UntermMcpServer.cs  UntermNative.cs  UntermPackageTools.cs  UntermRoslynCompletion.cs  UntermSessionList.cs  UntermSettingsProvider.cs  UntermToolGroup.cs  UntermWindow.cs
Editor/Plugins/Roslyn/: THIRD-PARTY-NOTICE.md
Tests/Editor/: CodeEditorTests.cs  RoslynCompletionTests.cs  Unterm.Editor.Tests.asmdef
native/: about.toml  build-macos.sh  build-windows.ps1
native/unterm/: Cargo.toml
native/unterm/examples/: discover_test.rs  dump_debug.rs  dump_selection.rs  dump_term.rs
native/unterm/src/: agentview.rs  browser.rs  clock.rs  control.rs  debugger.rs  editops.rs  editorview.rs  gpu.rs  highlight.rs  input.rs  iosurface.rs  lib.rs  markdown.rs  mcp.rs  palette.rs  panel.rs  popup.rs  pty.rs  quads.rs  renderer.rs  sessions.rs  shell.rs  surface.rs  term.rs  unity.rs
native/unterm/src/sdb/: mod.rs  value.rs  wire.rs
native/unterm/src/surface/: d3d.rs
