[package]
name = "unterm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native wgpu-rendered terminal emulator for Unity (Unterm)"

# Build a C-ABI dynamic library that Unity loads as a native plugin.
# On macOS the .dylib is renamed to a .bundle when copied into Assets/Plugins.
[lib]
name = "unterm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# GPU + text: pinned to what the previous panel verified so the IOSurface
# zero-copy path (raw MTLDevice/MTLTexture handed to wgpu-hal) keeps matching.
wgpu = "22"
glyphon = "0.6"
pollster = "0.3"
bytemuck = "1"
log = "0.4"
env_logger = "0.11"
# Display width of the IME preedit so it can be laid out over the right cells.
unicode-width = "0.1"

# Terminal model + PTY.
alacritty_terminal = "0.25"
portable-pty = "0.8"

# In-process MCP server hosted in the plugin so it survives Unity C# domain
# reloads. No transport/port: the control-protocol driver dispatches the agent's
# `mcp_message` requests straight in. Tool defs + execution come from the C# side.
serde_json = "1"

# IOSurface zero-copy path (macOS). Versions pinned to what wgpu 22 resolves
# (metal 0.29) so the raw MTLDevice/MTLTexture handed to wgpu-hal matches.
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
foreign-types = "0.5"
objc = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

# Windows zero-copy path: create a shared D3D12 render target on wgpu's device
# and open it on Unity's D3D11/D3D12 device. `d3d12` is pinned to what wgpu 22
# resolves so the raw ID3D12Resource handed to wgpu-hal matches; `winapi` (the
# COM crate that `d3d12` is built on) drives the shared-handle calls.
[target.'cfg(windows)'.dependencies]
d3d12 = "22"
winapi = { version = "0.3", features = [
    "d3d11",
    "d3d11_1",
    "d3d12",
    "dxgi",
    "dxgi1_4",
    "dxgiformat",
    "dxgitype",
    "winnt",
    "handleapi",
    "unknwnbase",
    "winerror",
    "guiddef",
    "minwindef",
] }

[dev-dependencies]
# Headless verification: dump the rendered terminal to a PNG without the Editor.
image = { version = "0.25", default-features = false, features = ["png"] }
