[package]
name = "unterm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native wgpu-rendered terminal emulator for Unity (Unterm)"

# Build a C-ABI dynamic library that Unity loads as a native plugin.
# On macOS Unity loads this .dylib directly as a native plugin (no .bundle rename).
[lib]
name = "unterm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# GPU + text: pinned to what the previous panel verified so the IOSurface
# zero-copy path (raw MTLDevice/MTLTexture handed to wgpu-hal) keeps matching.
wgpu = "29"
glyphon = "0.11"
pollster = "0.3"
bytemuck = "1"
log = "0.4"
env_logger = "0.11"
# Display width of the IME preedit so it can be laid out over the right cells.
unicode-width = "0.1"
# System locale detection + the `Script` enum, for a custom cosmic-text `Fallback`
# that resolves CJK ideographs to the right regional font (see gpu::font_system).
sys-locale = "0.3"
unicode-script = "0.5"

# Terminal model + PTY.
alacritty_terminal = "0.25"
portable-pty = "0.8"

# Markdown parsing for the agent panel (rendering is done by the panel itself).
pulldown-cmark = { version = "0.12", default-features = false }
# Syntax highlighting for fenced code blocks (no `tty`/crossterm; we render).
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# Tree-sitter highlighting for the code editor (accurate, incremental reparse).
# Grammar crates compile a C parser via their build.rs (needs a C compiler).
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
streaming-iterator = "0.1" # consume tree-sitter 0.25's QueryCursor::captures

# Git-diff gutter markers for the code editor: `git2` reads the index (stage-0)
# version of the open file (default-features off = no https/ssh, just local repo
# reads), `similar` line-diffs it against the live buffer. Both keep the Windows
# cross-check no worse than today (already blocked by tree-sitter's cc step).
git2 = { version = "0.20", default-features = false }
similar = "2"

# In-process MCP server hosted in the plugin so it survives Unity C# domain
# reloads. No transport/port: the control-protocol driver dispatches the agent's
# `mcp_message` requests straight in. Tool defs + execution come from the C# side.
serde_json = "1"

# Watch the project's session directory so the picker updates when sessions are
# created/removed in the background (e.g. a `claude` CLI in the same project).
# Cross-platform: FSEvents / inotify / ReadDirectoryChangesW under the hood.
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Localized relative-time labels for the transcript's gap separators ("5 minutes
# ago", "3 日前"): `timeago` is the moment.js-style formatter, `isolang` maps the
# editor locale to its language. All relative, so no date/timezone library.
timeago = { version = "0.6.1", default-features = false, features = ["isolang", "translations"] }
isolang = { version = "2.4.0", default-features = false }

# Markdown syntax highlighting / preview in the code editor.
tree-sitter-md = "0.5.3"

# Graceful child shutdown: SIGTERM the `claude` process before falling back to
# SIGKILL, so it can finalize its transcript (std's Child::kill is SIGKILL-only).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# IOSurface zero-copy path (macOS). Uses the same objc2-metal/objc2-io-surface
# bindings wgpu-hal 29 builds on, so the raw MTLDevice/MTLTexture handed to
# wgpu-hal matches.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = { version = "0.3", features = [
    "MTLDevice",
    "MTLCommandQueue",
    "MTLTexture",
    "MTLPixelFormat",
    "MTLResource",
    "MTLTypes",
    "objc2-io-surface",
] }
objc2-io-surface = "0.3"
# Native completion popup: a borderless non-activating NSPanel with a CAMetalLayer
# we render to with wgpu (so the list can overflow the editor window).
objc2-app-kit = { version = "0.3", features = [
    "NSResponder", "NSWindow", "NSPanel", "NSView", "NSScreen",
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
# IOSurface creation stays on the plain CoreFoundation FFI; the raw pointer is
# bridged into objc2's `&IOSurfaceRef` for the Metal texture call.
core-foundation = "0.10"
core-foundation-sys = "0.8"
# Capture the editor's MTLDevice/queue at UnityPluginLoad so the renderer can
# build wgpu on Unity's own GPU (see `unity_metal` in lib.rs). Same crate as the
# Windows D3D path below.
unity-native-plugin = { version = "0.9", features = ["metal"] }

# Windows zero-copy path: create a shared D3D12 render target on wgpu's device
# and open it on Unity's D3D11/D3D12 device. Uses the same `windows` (windows-rs)
# crate wgpu-hal 29 is built on, so the raw ID3D12Resource handed to wgpu-hal
# matches.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # Native popup window: a layered, no-activate, click-through top-level HWND that
    # wgpu renders into (the counterpart to the macOS NSPanel popup).
    "Win32_Graphics_Gdi",
    # Play the embedded "agent done" WAV from memory (PlaySoundW + SND_MEMORY).
    "Win32_Media_Audio",
    "Win32_System_LibraryLoader",
    # Probe whether a `claude` pid from the session registry is still alive.
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
# Same crate the macOS side uses; the d3d features pull in the
# IUnityGraphicsD3D11/D3D12 interfaces for the device capture in unity.rs.
unity-native-plugin = { version = "0.9", features = ["d3d11", "d3d12"] }
# Build the wgpu surface from the popup HWND. Pinned to the same major as the
# raw-window-handle wgpu 29 builds on (0.6).
raw-window-handle = "0.6"

[dev-dependencies]
# Headless verification: dump the rendered terminal to a PNG without the Editor.
image = { version = "0.25", default-features = false, features = ["png"] }
